<resources>
    <string name="app_name">Fitness App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="_0">0</string>
    <string name="logout">Logout</string>
    <string name="set_work_location">Set Work Location</string>
    <string name="steps">Steps</string>
    <string name="tweet">Tweet</string>
    <string name="reset_location">Reset Location</string>
</resources>
