<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="230sp"
        tools:text="1" />

    <Button
        android:id="@+id/btnWorkLocation"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSteps"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/set_work_location"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCounter"
        android:layout_centerInParent="true"
        android:text="@string/steps"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnResetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnWorkLocation"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/roundedbutton"
        android:enabled="false"
        android:padding="5dp"
        android:text="@string/reset_location"
        android:textColor="@color/white" />

</RelativeLayout>