<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivWalkLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="114dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />


    <EditText
        android:id="@+id/tvUserName"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivWalkLogo"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tvUserName"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:text="Signup"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignup"
        android:layout_centerInParent="true"
        android:textColor="@color/green"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:fontFamily="serif" />

</RelativeLayout>